# lci

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  Makefile  README  README.md  appveyor.yml  binding.c  binding.h  error.c  error.h  inet.c  inet.h  install.py  interpreter.c  interpreter.h  lexer.c  lexer.h  main.c  parser.c  parser.h  tokenizer.c  tokenizer.h  unicode.c  unicode.h
test/1.3-Tests/: CMakeLists.txt
test/1.3-Tests/0-Benchmarks/: CMakeLists.txt
test/1.3-Tests/0-Benchmarks/1-BFInterpreter/: CMakeLists.txt  test.in
test/1.3-Tests/1-Structure/: CMakeLists.txt
test/1.3-Tests/1-Structure/1-EmptyMainBlock/: test.lol  test.readme
test/1.3-Tests/1-Structure/10-CommasSeparate/: test.lol  test.readme
test/1.3-Tests/1-Structure/11-EllipsesJoinLF/: CMakeLists.txt  test.lol  test.readme
test/1.3-Tests/1-Structure/12-EllipsesJoinCR/: test.lol  test.readme
test/1.3-Tests/1-Structure/13-EllipsesJoinCRLF/: test.lol  test.readme
test/1.3-Tests/1-Structure/14-NoNewlineAfterJoinLF/: CMakeLists.txt  test.lol  test.readme
test/1.3-Tests/1-Structure/15-NoNewlineAfterJoinCR/: CMakeLists.txt  test.lol
test/1.3-Tests/1-Structure/16-NoNewlineAfterJoinCRLF/: CMakeLists.txt  test.lol
test/1.3-Tests/1-Structure/17-Includes/: test.lol  test.readme
test/1.3-Tests/1-Structure/2-MustBeginWithHAI/: CMakeLists.txt  test.readme
test/1.3-Tests/1-Structure/3-MustIncludeVersion/: CMakeLists.txt  test.lol  test.readme
test/1.3-Tests/1-Structure/4-MustEndWithKTHXBYE/: CMakeLists.txt  test.lol
test/1.3-Tests/1-Structure/5-IndentationIgnored/: test.lol
test/1.3-Tests/1-Structure/6-WhitespaceBetweenTokens/: test.lol  test.out
test/1.3-Tests/1-Structure/7-NewlineLF/: test.lol  test.readme
test/1.3-Tests/1-Structure/8-NewlineCR/: test.lol  test.readme
test/1.3-Tests/1-Structure/9-NewlineCRLF/: test.lol
test/1.3-Tests/10-Loops/1-Breaks/: test.lol  test.readme
test/1.3-Tests/10-Loops/2-Increment/: test.lol  test.readme
test/1.3-Tests/10-Loops/3-Decrement/: CMakeLists.txt  test.lol  test.readme
test/1.3-Tests/10-Loops/4-Until/: CMakeLists.txt  test.lol  test.readme
test/1.3-Tests/10-Loops/5-While/: test.lol  test.readme
test/1.3-Tests/10-Loops/6-UnaryFunction/: test.lol  test.out
test/1.3-Tests/10-Loops/7-EmptyBody/: CMakeLists.txt  test.lol
test/1.3-Tests/10-Loops/8-UntilMustIncludeVar/: CMakeLists.txt  test.lol
test/1.3-Tests/10-Loops/9-WhileMustIncludeVar/: CMakeLists.txt  test.lol  test.readme
test/1.3-Tests/11-Unicode/: CMakeLists.txt
test/1.3-Tests/11-Unicode/1-EllipsesJoinLF/: test.lol  test.readme
test/1.3-Tests/11-Unicode/2-EllipsesJoinCR/: test.lol  test.readme
test/1.3-Tests/11-Unicode/3-EllipsesJoinCRLF/: test.lol
test/1.3-Tests/11-Unicode/4-Strings/: test.lol
test/1.3-Tests/11-Unicode/5-CodePointInString/: test.lol
test/1.3-Tests/11-Unicode/6-NormativeNameInString/: test.lol
test/1.3-Tests/11-Unicode/7-InvalidCodePointInString/: CMakeLists.txt  test.lol  test.readme
test/1.3-Tests/11-Unicode/8-InvalidNormativeName/: CMakeLists.txt  test.lol
test/1.3-Tests/11-Unicode/9-ByteOrderMark/: test.lol
test/1.3-Tests/12-Arrays/: CMakeLists.txt
test/1.3-Tests/12-Arrays/1-EmptyArray/: CMakeLists.txt  test.lol  test.readme
test/1.3-Tests/12-Arrays/10-CallingObjectInitialization/: CMakeLists.txt  test.lol  test.out  test.readme
test/1.3-Tests/12-Arrays/11-AlternateSyntax/: CMakeLists.txt  test.readme
test/1.3-Tests/12-Arrays/11-CallingObjectAlternateSyntax/: CMakeLists.txt  test.lol  test.out  test.readme
test/1.3-Tests/12-Arrays/12-AlternateSyntax/: CMakeLists.txt  test.lol
test/1.3-Tests/12-Arrays/12-Inheritance/: CMakeLists.txt
test/1.3-Tests/12-Arrays/2-SlotCreation/: CMakeLists.txt  test.lol  test.readme
test/1.3-Tests/12-Arrays/3-SlotInitialization/: CMakeLists.txt  test.lol  test.readme
test/1.3-Tests/12-Arrays/4-SlotAssignment/: CMakeLists.txt  test.lol  test.out  test.readme
test/1.3-Tests/12-Arrays/5-FunctionStorage/: CMakeLists.txt  test.lol  test.out  test.readme  xaa
test/1.3-Tests/12-Arrays/6-FunctionDeclaration/: CMakeLists.txt  test.lol  test.out  test.readme
test/1.3-Tests/12-Arrays/7-CallingObjectReference/: CMakeLists.txt  test.lol  test.out  test.readme
test/1.3-Tests/12-Arrays/8-CallingObjectAssignment/: CMakeLists.txt  test.lol  test.readme
test/1.3-Tests/12-Arrays/9-CallingObjectDeclaration/: CMakeLists.txt  test.lol  test.out  test.readme
test/1.3-Tests/2-Comments/1-SingleLine/: CMakeLists.txt
test/1.3-Tests/2-Comments/2-MultipleLine/: CMakeLists.txt
test/1.3-Tests/3-Types/: CMakeLists.txt
test/1.3-Tests/3-Types/1-Nil/: CMakeLists.txt
test/1.3-Tests/3-Types/2-Boolean/: CMakeLists.txt
test/1.3-Tests/3-Types/4-Float/: CMakeLists.txt
test/1.3-Tests/3-Types/5-String/: CMakeLists.txt
test/1.3-Tests/4-Output/1-MustHaveAnArg/: CMakeLists.txt  test.lol
test/1.3-Tests/4-Output/2-Booleans/: CMakeLists.txt  test.lol  test.readme
test/1.3-Tests/4-Output/3-Integers/: test.lol  test.readme
test/1.3-Tests/4-Output/4-Floats/: test.lol  test.out
test/1.3-Tests/4-Output/5-BasicStrings/: test.lol
test/1.3-Tests/4-Output/6-MixedTypes/: test.lol
test/1.3-Tests/4-Output/7-NoNewline/: CMakeLists.txt  test.lol  test.readme
test/1.3-Tests/5-Input/: CMakeLists.txt
test/1.3-Tests/5-Input/1-ShortString/: CMakeLists.txt  test.lol  test.out
test/1.3-Tests/5-Input/2-LongString/: test.in
test/1.3-Tests/5-Input/3-EscapeCharacter/: CMakeLists.txt  test.in  test.lol  test.out  test.readme
test/1.3-Tests/6-Variables/: CMakeLists.txt
test/1.3-Tests/6-Variables/1-MustDeclare/: CMakeLists.txt  test.lol  test.readme
test/1.3-Tests/6-Variables/10-Indirect/: CMakeLists.txt
test/1.3-Tests/6-Variables/11-AlternativeArticle/: CMakeLists.txt  test.lol  test.out  test.readme
test/1.3-Tests/6-Variables/2-NoRedefinition/: CMakeLists.txt  test.lol
test/1.3-Tests/6-Variables/3-Initialization/: test.lol
test/1.3-Tests/6-Variables/4-CaseSensitivity/: test.lol  test.readme
test/1.3-Tests/7-Operators/: CMakeLists.txt
test/1.3-Tests/9-Functions/: CMakeLists.txt
(+1131 files in other folders)
