add_subdirectory(0-Benchmarks)
add_subdirectory(1-Structure)
add_subdirectory(2-Comments)
add_subdirectory(3-Types)
add_subdirectory(4-Output)
add_subdirectory(5-Input)
add_subdirectory(6-Variables)
add_subdirectory(7-Operators)
add_subdirectory(8-Conditionals)
add_subdirectory(9-Functions)
add_subdirectory(10-Loops)
add_subdirectory(11-Unicode)
add_subdirectory(12-Arrays)
