add_subdirectory(1-EmptyMainBlock)
add_subdirectory(2-MustBeginWithHAI)
add_subdirectory(3-MustIncludeVersion)
add_subdirectory(4-MustEndWithKTHXBYE)
add_subdirectory(5-IndentationIgnored)
add_subdirectory(6-WhitespaceBetweenTokens)
add_subdirectory(7-NewlineLF)
add_subdirectory(8-NewlineCR)
add_subdirectory(9-NewlineCRLF)
add_subdirectory(10-CommasSeparate)
add_subdirectory(11-EllipsesJoinLF)
add_subdirectory(12-EllipsesJoinCR)
add_subdirectory(13-EllipsesJoinCRLF)
add_subdirectory(14-NoNewlineAfterJoinLF)
add_subdirectory(15-NoNewlineAfterJoinCR)
add_subdirectory(16-NoNewlineAfterJoinCRLF)
add_subdirectory(17-Includes)
