add_subdirectory(1-EllipsesJoinLF)
add_subdirectory(2-EllipsesJoinCR)
add_subdirectory(3-EllipsesJoinCRLF)
add_subdirectory(4-Strings)
add_subdirectory(5-CodePointInString)
add_subdirectory(6-NormativeNameInString)
add_subdirectory(7-InvalidCodePointInString)
add_subdirectory(8-InvalidNormativeName)
add_subdirectory(9-ByteOrderMark)
