add_subdirectory(1-EmptyArray)
add_subdirectory(2-SlotCreation)
add_subdirectory(3-SlotInitialization)
add_subdirectory(4-SlotAssignment)
add_subdirectory(5-FunctionStorage)
add_subdirectory(6-FunctionDeclaration)
add_subdirectory(7-CallingObjectReference)
add_subdirectory(8-CallingObjectAssignment)
add_subdirectory(9-CallingObjectDeclaration)
add_subdirectory(10-CallingObjectInitialization)
add_subdirectory(11-AlternateSyntax)
add_subdirectory(12-Inheritance)
