add_subdirectory(1-MustDeclare)
add_subdirectory(2-NoRedefinition)
add_subdirectory(3-Initialization)
add_subdirectory(4-CaseSensitivity)
add_subdirectory(5-UninitializedNil)
add_subdirectory(6-Assignment)
add_subdirectory(7-AssignmentSameVariable)
add_subdirectory(8-TypeInitialization)
add_subdirectory(9-Deallocation)
add_subdirectory(10-Indirect)
