add_subdirectory(1-Addition)
add_subdirectory(2-Subtraction)
add_subdirectory(3-Multiplication)
add_subdirectory(4-Division)
add_subdirectory(5-Modulo)
add_subdirectory(6-Maximum)
add_subdirectory(7-Minimum)
add_subdirectory(8-LogicalANDBinary)
add_subdirectory(9-LogicalORBinary)
add_subdirectory(10-LogicalXORBinary)
add_subdirectory(11-LogicalNOTUnary)
add_subdirectory(12-LogicalANDNary)
add_subdirectory(13-LogicalORNary)
add_subdirectory(14-Equality)
add_subdirectory(15-Inequality)
add_subdirectory(16-Concatenation)
add_subdirectory(17-ExplicitCast)
add_subdirectory(18-ExplicitRecast)
