add_subdirectory(1-VoidWithSideEffects)
add_subdirectory(2-ReturnValue)
add_subdirectory(3-VoidReturnValue)
add_subdirectory(4-NilReturnValue)
add_subdirectory(5-Recursion)
add_subdirectory(6-DoubleRecursion)
add_subdirectory(7-ExpressionArguments)
add_subdirectory(8-VoidMustHaveNoArguments)
add_subdirectory(9-TooManyArguments)
add_subdirectory(10-TooFewArguments)
add_subdirectory(11-EmptyBody)
