add_subdirectory(1-SeparateStartEndLines)
add_subdirectory(2-SeparateStartLineOnly)
add_subdirectory(3-SeparateEndLineOnly)
add_subdirectory(4-MustStartOnSeparateLine)
add_subdirectory(5-MustEndOnOwnLine)
add_subdirectory(6-BeginAfterLineSeparator)
add_subdirectory(7-EndBeforeLineSeparator)
add_subdirectory(8-IgnoreEmbeddedBTW)
add_subdirectory(9-BeforeHAI)
add_subdirectory(10-AfterKTHXBYE)
