add_subdirectory(1-Intergers)
add_subdirectory(10-ArityCheck)
add_subdirectory(11-OptionalAN)
add_subdirectory(12-IntegerDivisionBy0)
add_subdirectory(13-FloatDivisionBy0)
add_subdirectory(2-FloatInteger)
add_subdirectory(3-IntegerFloat)
add_subdirectory(4-Floats)
add_subdirectory(5-IntegerStrings)
add_subdirectory(6-FloatIntegerStrings)
add_subdirectory(7-IntegerFloatStrings)
add_subdirectory(8-FloatStrings)
add_subdirectory(9-Nested)
